WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67421
HTMLMediaElement should use fastHasAttribute instead of hasAttribute
https://bugs.webkit.org/show_bug.cgi?id=67421
Summary
HTMLMediaElement should use fastHasAttribute instead of hasAttribute
Eric Carlson
Reported
2011-09-01 11:44:47 PDT
As noted in the review of
https://bugs.webkit.org/show_bug.cgi?id=58369
, when HTMLMediaElement checks attribute values style attributes and SVG animated attributes are not involved so it would be faster to use fastHasAttribute instead of hasAttribute.
Attachments
Proposed patch
(3.82 KB, patch)
2011-09-01 11:52 PDT
,
Eric Carlson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2011-09-01 11:45:49 PDT
<
rdar://problem/10061390
>
Eric Carlson
Comment 2
2011-09-01 11:52:35 PDT
Created
attachment 105999
[details]
Proposed patch
Simon Fraser (smfr)
Comment 3
2011-09-01 14:08:46 PDT
Comment on
attachment 105999
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=105999&action=review
> Source/WebCore/ChangeLog:8 > + No new tests required, this is just an optimization.
It would be nice if your change log explained why it's better, for those of us following along.
Eric Carlson
Comment 4
2011-09-01 14:21:57 PDT
http://trac.webkit.org/changeset/94344
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug