HTMLMediaElement should use fastHasAttribute instead of hasAttribute https://bugs.webkit.org/show_bug.cgi?id=67421

Reviewed by Simon Fraser.

Use fastHasAttribute instead of hasAttribute because it is faster, and HTMLMediaElement
doesn't ever need to check style or SVG animated attributes.

No new tests required, this is just an optimization.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::selectMediaResource): hasAttribute -> fastHasAttribute.
(WebCore::HTMLMediaElement::loadResource): Ditto.
(WebCore::HTMLMediaElement::autoplay): Ditto.
(WebCore::HTMLMediaElement::loop): Ditto.
(WebCore::HTMLMediaElement::controls): Ditto.
(WebCore::HTMLMediaElement::selectNextSourceChild): Ditto.
(WebCore::HTMLMediaElement::sourceWasAdded): Ditto.


Canonical link: https://commits.webkit.org/83253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94344 268f45cc-cd09-0410-ab3c-d52691b4dbfc